Finished a BDD construction algorithm

--- a/src/BDD-tinkering.ipynb
+++ b/src/BDD-tinkering.ipynb
@@ -2,33 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Base.Meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_expr = Meta.parse(\"(b & !c) | (!b & c)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_sexpr(a_expr)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -43,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +25,7 @@
        "ROBDDContext"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,8 +42,8 @@
     "\n",
     "function NodeTable(n::Int64)\n",
     "    d = Dict{Int64,BDDNode}()\n",
-    "    d[0] = BDDNode(n+1,n+1,n+1)\n",
-    "    d[1] = BDDNode(n+1,n+1,n+1)\n",
+    "    d[0] = BDDNode(n+1,0,0)\n",
+    "    d[1] = BDDNode(n+1,1,1)\n",
     "    return NodeTable(d,1)\n",
     "end\n",
     "\n",
@@ -82,11 +55,15 @@
     "\n",
     "struct ROBDDContext\n",
     "    order::Vector{Symbol}\n",
+    "    order_lookup::Dict{Symbol,Int64}\n",
     "    T::NodeTable\n",
     "    H::LookupTable\n",
     "end\n",
     "\n",
-    "ROBDDContext(order::Vector{Symbol}) = ROBDDContext(order, NodeTable(length(order)), LookupTable())"
+    "ROBDDContext(order::Vector{Symbol}) = ROBDDContext(order, \n",
+    "                                                   Dict(name=>idx for (idx,name) in enumerate(order)), \n",
+    "                                                   NodeTable(length(order)), \n",
+    "                                                   LookupTable())"
    ]
   },
   {
@@ -149,23 +126,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "apply (generic function with 1 method)"
+       "apply"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Apply a unary operation `op` to a BDD\n",
+    "\"\"\"\n",
+    "function apply(ctxt::ROBDDContext, op::Function, idx::Int64;\n",
+    "               memo::Dict{Tuple{Function,Vararg{Int64}},Int64}=Dict{Tuple{Function,Vararg{Int64}},Int64}())\n",
+    "    \n",
+    "    function rec_app(u1)\n",
+    "        if haskey(memo, (op,u1))\n",
+    "            return memo[(op,u1)]\n",
+    "        elseif in(u1, (0,1))\n",
+    "            u = Int64(op(Bool(u1)))\n",
+    "        else\n",
+    "            u = get_or_add(ctxt, \n",
+    "                           BDDNode(var(ctxt,u1), \n",
+    "                                   rec_app(lo(ctxt,u1)),\n",
+    "                                   rec_app(hi(ctxt,u1))\n",
+    "                                  )\n",
+    "                           )\n",
+    "        end\n",
+    "        memo[(op,u1)] = u\n",
+    "        return u\n",
+    "    end\n",
+    "        \n",
+    "    return rec_app(idx)\n",
+    "end\n",
+    "    \n",
+    "\"\"\"\n",
+    "Apply a binary operation `op` to two BDDs \n",
+    "\"\"\"\n",
     "function apply(ctxt::ROBDDContext, op::Function, idx1::Int64, idx2::Int64; \n",
-    "               memo::Dict{Tuple{Function,Int64,Int64},Int64}=Dict{Tuple{Function,Int64,Int64},Int64}())\n",
+    "               memo::Dict{Tuple{Function,Vararg{Int64}},Int64}=Dict{Tuple{Function,Vararg{Int64}},Int64}())\n",
     "\n",
     "    function rec_app(u1, u2)\n",
     "        if haskey(memo, (op,u1,u2))\n",
@@ -173,18 +179,25 @@
     "        elseif in(u1, (0,1)) & in(u2, (0,1))\n",
     "            u = Int64(op(Bool(u1), Bool(u2)))\n",
     "        elseif var(ctxt, u1) == var(ctxt, u2)\n",
-    "            u = get_or_add(var(ctxt,u1), \n",
-    "                           rec_app(lo(ctxt,u1), lo(ctxt,u2)), \n",
-    "                           rec_app(hi(ctxt,u1), hi(ctxt,u2)))\n",
+    "            u = get_or_add(ctxt, \n",
+    "                           BDDNode(var(ctxt,u1), \n",
+    "                                   rec_app(lo(ctxt,u1), lo(ctxt,u2)), \n",
+    "                                   rec_app(hi(ctxt,u1), hi(ctxt,u2))\n",
+    "                                   )\n",
+    "                           )\n",
     "        elseif var(ctxt, u1) < var(ctxt, u2)\n",
-    "            u = get_or_add(var(ctxt,u1),\n",
-    "                           rec_app(lo(ctxt, u1), u2),\n",
-    "                           rec_app(hi(ctxt, u1), u2)\n",
+    "            u = get_or_add(ctxt,\n",
+    "                           BDDNode(var(ctxt,u1),\n",
+    "                                   rec_app(lo(ctxt, u1), u2),\n",
+    "                                   rec_app(hi(ctxt, u1), u2)\n",
+    "                                   )\n",
     "                           )\n",
     "        else\n",
-    "            u = get_or_add(var(ctxt,u2),\n",
-    "                           rec_app(u1, lo(ctxt, u2)),\n",
-    "                           rec_app(u1, hi(ctxt, u2))\n",
+    "            u = get_or_add(ctxt,\n",
+    "                           BDDNode(var(ctxt,u2),\n",
+    "                                   rec_app(u1, lo(ctxt, u2)),\n",
+    "                                   rec_app(u1, hi(ctxt, u2))\n",
+    "                                   )\n",
     "                           )\n",
     "        end\n",
     "        memo[(op,u1,u2)] = u\n",
@@ -197,16 +210,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ROBDDContext([:x1, :x2], NodeTable(Dict{Int64,BDDNode}(0 => BDDNode(3, 3, 3),1 => BDDNode(3, 3, 3)), 1), LookupTable(Dict{BDDNode,Int64}()))"
+       "build_robdd (generic function with 1 method)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function build_robdd(ctxt::ROBDDContext, bool_expr::Union{Bool,Symbol,Expr})\n",
+    "    memo = Dict{Tuple{Function,Vararg{Int64}},Int64}()\n",
+    "    \n",
+    "    function rec_build(my_expr)\n",
+    "        # Terminals\n",
+    "        if typeof(my_expr) == Bool\n",
+    "            return Int64(my_expr)\n",
+    "        elseif typeof(my_expr) == Symbol\n",
+    "            u = get_or_add(ctxt, \n",
+    "                           BDDNode(ctxt.order_lookup[my_expr],0,1)\n",
+    "                           )\n",
+    "        # Boolean op nodes\n",
+    "        else\n",
+    "            op = eval(my_expr.args[1])\n",
+    "            sub_exprs = my_expr.args[2:end]\n",
+    "            sub_bdds = Vector{Int64}(undef,length(sub_exprs))\n",
+    "            for (i,se) in enumerate(sub_exprs)\n",
+    "                sub_bdds[i] = rec_build(se)\n",
+    "            end\n",
+    "            u = apply(ctxt, op, sub_bdds...; memo=memo)\n",
+    "        end\n",
+    "        return u\n",
+    "    end\n",
+    "    \n",
+    "    return rec_build(bool_expr)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ROBDDContext([:x1, :x2], Dict(:x2 => 2,:x1 => 1), NodeTable(Dict{Int64,BDDNode}(0 => BDDNode(3, 0, 0),1 => BDDNode(3, 1, 1)), 1), LookupTable(Dict{BDDNode,Int64}()))"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,13 +275,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":(!x1 | x2)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myexpr = Meta.parse(\"!x1 | x2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "build_robdd(my_ctxt, myexpr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "ROBDDContext([:x2, :x1], Dict(:x2 => 1,:x1 => 2), NodeTable(Dict{Int64,BDDNode}(0 => BDDNode(3, 0, 0),1 => BDDNode(3, 1, 1)), 1), LookupTable(Dict{BDDNode,Int64}()))"
       ]
      },
      "execution_count": 13,
@@ -232,135 +330,47 @@
     }
    ],
    "source": [
-    "apply(my_ctxt, |, 0, 0)"
+    "new_ctxt = ROBDDContext([:x2,:x1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "myexpr = Meta.parse(\"a | b | c | d | e\")"
+    "build_robdd(new_ctxt, myexpr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BDDNode(1, 3, 1)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "myexpr = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Expr(:call, :&, :f, a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myexpr = Expr(:call, :&, true, false)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "supertype(Symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function dumb_func(foo::Bool, bar::Bool)::Bool\n",
-    "    return false\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "println(typeof(dumb_func))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fing = methods(dumb_func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "typeof(&) <: Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function dumb_func(x)\n",
-    "    function sub_func(y)\n",
-    "        return x + y\n",
-    "    end\n",
-    "    \n",
-    "    return sub_func(x)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dumb_func(10)"
+    "new_ctxt.T[5]"
    ]
   },
   {
